# AssignmentC-

./: CMakeLists.txt  main.cpp  property.bfbs  property.fbs  property_generated.h  readME.md  sender.cpp
